--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,5 +10,6 @@
 
   <body>
     <%= yield %>
+    <script src="https://maps.googleapis.com/maps/api/js?key=&callback=initMap" async defer></script>
   </body>
 </html>
