key google maps

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,6 @@
 
   <body>
     <%= yield %>
-    <script src="https://maps.googleapis.com/maps/api/js?key=&callback=initMap" async defer></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDc1aaL4vDWVMt__WdEBG1hIuUi9nKGiAI&callback=initMap" async defer></script>
   </body>
 </html>
