--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,15 @@
   </head>
 
   <body>
-    <%= yield %>
+    <%= render 'shared/header' %>
+    <%= render 'shared/sidebar' %>
+    <div id="wrapper" class="toggled">
+      <div class="row">
+        <div class="col-lg-12">
+          <%= yield %>
+        </div>
+      </div>
+    </div>
     <script src="https://maps.googleapis.com/maps/api/js?key=&callback=initMap" async defer></script>
   </body>
 </html>
