--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -32,3 +32,10 @@
   width: 22px;
   bottom: 0;
 }
+
+.main-navbar {
+  z-index: 2000;
+  -webkit-box-shadow: 0px -3px 14px 0px #a8a8a8;
+  -moz-box-shadow: 0px -3px 14px 0px #a8a8a8;
+  box-shadow: 0px -3px 14px 0px #a8a8a8;
+}
