--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -1,4 +1,4 @@
-<div id="sidebar">
+<div id="sidebar" class="left-sidebar">
   <div class="row">
     <div class="col-md-10" id="items">
     </div>
