--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -39,3 +39,11 @@
   -moz-box-shadow: 0px -3px 14px 0px #a8a8a8;
   box-shadow: 0px -3px 14px 0px #a8a8a8;
 }
+
+.brand-image {
+  width: 128px
+}
+
+#map {
+  height: calc(100vh - 57px);
+}
