--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,16 +1,15 @@
-<nav class="navbar navbar-toggleable-md navbar-light bg-faded main-navbar">
+<nav class="navbar navbar-toggleable-sm navbar-light bg-faded main-navbar">
   <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <a class="navbar-brand" href="#">
-    <img src="/header.png" alt="noPonto, rota de onibus, parada">
+    <img src="/header.png" alt="noPonto, rota de onibus, parada" class="brand-image">
   </a>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
+    <ul class="navbar-nav mr-auto"> </ul>
 
-    </ul>
-    <%= form_tag home_search_lines_url, method: :post, class: "form-inline my-2 my-lg-0", remote: true do %>
+    <%= form_tag home_search_lines_url, method: :post, class: "form-inline my-2 my-lg-0 my-sm-0", remote: true do %>
       <div class="input-group">
         <%= text_field_tag(:search_input, params[:search], placeholder: "Search", class: "form-control") %>
         <span class="input-group-btn">
