--- a/app/views/home/index.js.erb
+++ b/app/views/home/index.js.erb
@@ -1,1 +1,1 @@
-$('#sidebar #items').html('<%= escape_javascript render("line", Hash[*@lines]) %>');
+$('#sidebar #items').html('<%= escape_javascript render("line", Hash[*@lines]) %>')
