Installed devise for authentication. Added field role for STI

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,9 @@
   <body>
     <%= render 'shared/header' %>
     <%= render 'shared/sidebar' %>
+
+    <%= render 'shared/alerts' %>
+
     <div id="wrapper" class="toggled">
       <%= yield %>
     </div>
