--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -8,7 +8,7 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto"> </ul>
-
+    <a href = "/favorites" > Favorites </a>
     <%= form_tag home_search_lines_url, id: 'search-line-form', method: :post, class: "form-inline my-2 my-lg-0 my-sm-0", remote: true do %>
       <div class="input-group">
         <%= text_field_tag(:search_input, params[:search], placeholder: "Search", class: "form-control") %>
