--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,8 @@
     <div id="wrapper" class="toggled">
       <%= yield %>
     </div>
+    <%= render 'shared/modals' %>
+
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDc1aaL4vDWVMt__WdEBG1hIuUi9nKGiAI&callback=initMap" async defer></script>
   </body>
 </html>
