Added button for Sign Up with Facebook

--- a/app/views/shared/_modals.html.erb
+++ b/app/views/shared/_modals.html.erb
@@ -9,7 +9,11 @@
         </button>
       </div>
       <div class="modal-body">
-        <%= link_to "Facebook signup", user_facebook_omniauth_authorize_path %>
+
+        <%= link_to user_facebook_omniauth_authorize_path, class: "btn btn-block btn-social btn-facebook" do %>
+          <span class="fa fa-facebook"></span> Sign in with Facebook
+        <% end %>
+
       </div>
   </div>
 </div>
