--- a/app/views/home/_line.html.erb
+++ b/app/views/home/_line.html.erb
@@ -1,6 +1,8 @@
 <% if @lines.present? %>
   <% @lines.each do |line| %>
     <div class="line-item">
+      <section class="fave"></section>
+      
       <h4> <%= link_to "Linha: #{line['CodigoLinha']}", "#", id: "#{line['CodigoLinha']}", remote: true %></h4>
       <p><%= line["DenominacaoTPTS"] %> - <%= line["DenominacaoTSTP"] %></p>
     </div>
